@@ -1,0 +1,10 @@
+Title: LDAP: Improved validation of groups to attributes sync plugin
+Level: 1
+Component: multisite
+Class: fix
+Compatible: compat
+State: unknown
+Version: 1.4.0i4
+Date: 1486382449
+
+
